--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,11 @@
 		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.telusko</groupId>
+
+	<groupId>com.example.projects</groupId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
 	<artifactId>Deloitte</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Deloitte</name>
 	<description>Demo project for Spring Boot</description>
 
